--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,14 @@
     font-family: 'Marcellus', serif;
 }
 
+:root {
+  --main-exa-color: #EC5B3D;
+  --title-font-size: 60px;
+  --font-family-main: 'Marcellus', serif;
+  --font-family-secunday:'Josefin Sans', sans-serif;
+
+}
+
 html{
     font-family: 'Roboto', sans-serif;
     font-size: 10px;
@@ -47,6 +55,7 @@ header{
     text-decoration: none;
     color: #fff;
     font-size: 1.6rem;
+    font-family: var(--font-family-secunday);
 }
 
 .nav .logo{
@@ -166,18 +175,18 @@ header{
     display: grid;
     grid-template-columns: [inicio] 1fr [linea2] 1fr [linea3] 1fr [linea4] 1fr [linea5] 1fr [linea6] 1fr [linea7] 1fr [linea8] 1fr [linea9] 1fr [linea10] 1fr [linea11] 1fr [linea12] 1fr [final];
     grid-template-rows: [inicio] 1fr [fila2] 1fr [fila3] 1fr [fila4] 1fr [final];
-    grid-gap: 5px;
+    /* grid-gap: 5px; */
 }
 
 .main-section--item__logo{
-  background-color: lightblue;
+  /* background-color: lightblue; */
   grid-column: inicio / linea6;
   grid-row: inicio / fila3;
   z-index: 0;
 }
 
 .main-section--item__logo img{
-  width: 100%;
+  width: 70%;
   padding-top: 10rem;
 }
 
@@ -194,34 +203,149 @@ header{
 }
 
 .main-section--item__white{
-  background-color: lightgreen;
+  background-color: #ffffff;
   grid-column: linea9 / final;
   grid-row: inicio / final;
 }
 
 .main-section--item__date{
-  background-color: maroon;
+  /* background-color: maroon; */
+  display: flex;
+  align-items: flex-end;
   grid-column: linea8 / final;
   grid-row: fila2 / fila3;
 }
 
+.item--date__container{
+  width: 100%;
+  height: 80px;
+  background-color: var(--main-exa-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.item--date__container p{
+  font-size: 34px;
+}
+
 .main-section--item__description{
-  background-color: moccasin;
-  grid-column: linea8 / final;
+  /* background-color: moccasin; */
+  grid-column: linea9 / final;
   grid-row: fila3 / fila4;
 }
 
-.main-section--item__cta{
-  background-color: navy;
+.item--description__container{
+  padding: 20px;
+  text-align: center;
 }
 
-.demo-content{
-    width: 100%;
-    height: 200vh;
-    background-color: #fff;
+.item--description__container p{
+  font-size: 22px;
+  font-weight: 300;  
+  font-family: var(--font-family-secunday);
 }
+
+
+.cta--container{
+  display: flex;
+  justify-content: center;
+}
+
+.item--cta{
+  display: flex;
+  justify-content: center;
+  background-color: var(--main-exa-color);
+  color: #313131;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  width: 120px;
+  transition: background-color .5s ease;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  font-size: 1.6rem;
+}
+
+.main-section--item__cta{
+  /* background-color: violet; */
+  grid-column: linea9 / final;
+  grid-row: fila4 / final;
+}
+
 /* Hero end*/
 
+/* video inicio */
+
+.video{
+  width: 100%;
+  height: auto;
+  background-color: #ffffff;
+}
+.video--container{
+  margin: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.video--title{
+  font-size: 40px;
+  margin-top: 86px;
+  margin-bottom: 50px;
+}
+
+.video--grid{
+  display: grid;
+  width: 80%;
+  max-width: 800px;
+  grid-template-columns: [inicio] 1fr [linea2] 1fr [linea3] 1fr [linea4] 1fr [linea5] 1fr [final];
+  grid-template-rows: [inicio-fila] 1fr [final-fila];
+  height: auto;
+  margin-bottom: 86px;
+}
+
+.border--item{
+  border: 2px solid rgb(210 210 210);
+  border-radius: 25px;
+  grid-column: inicio / linea5;
+  grid-row: inicio-fila / final-fila;
+}
+
+.video--item{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: #d3d3d3;
+  grid-column: linea2 / final;
+  grid-row: inicio-fila / final-fila;
+  position: relative;
+  padding-bottom: 56.25%; /* 16/9 ratio */
+  padding-top: 30px; /* IE6 workaround*/
+  height: 0;
+  overflow: hidden; 
+}
+
+.video--item iframe,
+.video--item object,
+.video--item embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
+
+/* video final */
+
+
+/* Description inicio */
+
+.description{
+  
+}
+
+/* description final */
 
 
 
