--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ header{
 #nav-cta{
     display: flex;
     border: 2px solid #DC6448;
-    background-color: #ffffff;
+    background-color: #ffffff7a;
     color:  #DC6448;
     padding: 1rem 2rem;
     border-radius: 2rem;
