--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header{
 
 .nav a{
     text-decoration: none;
-    color: #EC5B3D;
+    color: #000000;
     font-size: 1.6rem;
     font-family: var(--font-family-secunday);
 }
