--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,14 @@
 
 }
 
+.uppercase{
+  text-transform: uppercase;
+}
+
 html{
     font-family: 'Roboto', sans-serif;
     font-size: 10px;
+    scroll-behavior: smooth;
 }
 
 header{
@@ -242,7 +247,8 @@ header{
 }
 
 .item--description__container p{
-  font-size: 22px;
+  font-size: calc(1.2em + 1vw);
+  text-align: left;
   font-weight: 300;  
   font-family: var(--font-family-secunday);
 }
@@ -258,20 +264,21 @@ header{
   justify-content: center;
   background-color: var(--main-exa-color);
   color: #313131;
-  padding: 1rem 2rem;
-  border-radius: 1rem;
-  width: 120px;
+  padding: 1.5rem 2rem;
+  border-radius: 3rem;
+  width: 150px;
   transition: background-color .5s ease;
   text-decoration: none;
   color: rgb(255, 255, 255);
   font-size: 1.6rem;
+  font-family: var(--font-family-secunday);
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .item--cta:hover{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  width: 125px;
+  width: 155px;
 }
 
 .main-section--item__cta{
@@ -369,10 +376,13 @@ min-height: 70vh;
 .description__container h2{
   font-size: 40px;
   padding: 5%;
+  color: var(--main-exa-color);
 }
 
 .description__container p{
-  font-size: 16px;
+  font-size: calc(1em + 1vw);
+  font-family: var(--font-family-secunday);
+  font-weight: 300;
   padding: 5%;
 }
 
@@ -382,6 +392,7 @@ min-height: 70vh;
   display: flex;
   align-content: baseline;
   justify-content: flex-end;
+  align-content: center;
 }
 
 .description__img--container img{
@@ -563,7 +574,7 @@ min-height: 70vh;
   display: flex;
   align-self:center;
     justify-content: center;
-    font-size: 16px;
+    font-size: calc(1em + .7vw);
     margin-bottom: 45px;
 }
 
@@ -676,6 +687,17 @@ min-height: 70vh;
 footer{
   height: 10vh;
   background-color: black;
+  color: rgb(209, 209, 209);
+}
+
+.contacto{
+  margin: 1rem;
+  padding: 1rem;
+}
+
+footer a{
+  text-decoration: none;
+    color: rgba(255, 255, 255, 0.671);
 }
 /* fin footer */
 
@@ -751,7 +773,8 @@ footer{
     }
 
     .main-section--item__description p{
-      font-size: 14px;
+      
+      text-align: initial;
     }
 
     .main-section--item__cta{
@@ -760,6 +783,10 @@ footer{
 
     .description__container h2{
       font-size: 30px;
+    }
+
+    .description__container p{
+      font-size: calc(1em + 2vw);
     }
 
     .countdown__name{
