--- a/styles.css
+++ b/styles.css
@@ -514,7 +514,8 @@ min-height: 70vh;
   margin-top: 7px;
   font-size: 18px;
   font-family:var(--font-family-secunday);
-  color: #939393;
+  color: rgb(49 49 49);
+  font-weight: 300;
 }
 
 .speaker__sc--container{
@@ -548,6 +549,13 @@ min-height: 70vh;
   background-color: #E6E6E6;
 }
 
+.tweet__container{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+}
+
 .tweet__container h1{
   font-size: 25px;
 }
@@ -560,6 +568,13 @@ min-height: 70vh;
 
 .tweet__container a{
   text-decoration: none;
+  color: #1b95e0;
+  background-color: #ffffff00 !important;;
+}
+
+.tweet-styles{
+  color: #1b95e0;
+  background-color: #ffffff00 !important;;
 }
 
 /* fin tweet */
@@ -585,6 +600,12 @@ min-height: 70vh;
 
 .temario__list ul{
   padding: 0px 45px 0px;
+}
+
+.temario__list ul li{
+  font-family: var(--font-family-secunday);
+  margin-bottom: 5px;
+  font-weight: 300;
 }
 
 .temario__img{
@@ -615,7 +636,7 @@ min-height: 70vh;
   width: 300px;
   border: 2px solid rgb(220, 100, 72);
   background-color: #ffffff;
-  height: 325px;
+  min-height: 325px;
   border-radius: 12px;
   margin: 0px 10px 35px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -637,7 +658,7 @@ min-height: 70vh;
 
 .ticktes__info{
   background-color: #E8E8E8;
-  height: 70px;
+  height: 100px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -645,6 +666,9 @@ min-height: 70vh;
 
 .info__subtitle{
   font-size: 12px;
+
+  margin-bottom: 5px;
+
   font-family: var(--font-family-secunday);
 }
 
@@ -662,21 +686,22 @@ min-height: 70vh;
   display: flex;
   flex-wrap: wrap;
   margin-top: 10px;
+  min-height: 110px;
 }
 
 .features__item{
   margin: 8px 8px 4px;
   display: flex;
   align-items: center;
-  border-radius: 15px;
-  height: 26px;
+  border-radius: 25px;
+  height: fit-content;
   max-width: fit-content;
   background-color: #ff3f1752;
 }
 
 .features__item p{
   font-size: 14px;
-  padding: 0px 10px 0px;
+  padding: 10px 10px;
   font-family: var(--font-family-secunday);
   color: #ce2a09;
 }
